--- a/InvenTree/locale/de/LC_MESSAGES/django.po
+++ b/InvenTree/locale/de/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-09 02:32+0000\n"
-"PO-Revision-Date: 2021-07-08 23:07\n"
+"PO-Revision-Date: 2021-07-09 02:36\n"
 "Last-Translator: \n"
 "Language-Team: German\n"
 "Language: de_DE\n"
@@ -6263,13 +6263,11 @@ msgstr "Farbschemata"
 
 #: templates/InvenTree/settings/appearance.html:29
 #, python-format
-msgid ""
-"\n"
+msgid "\n"
 "        The CSS sheet \"%(invalid_color_theme)s.css\" for the currently selected color theme was not found.<br>\n"
 "        Please select another color theme :)\n"
 "    "
-msgstr ""
-"\n"
+msgstr "\n"
 "\t\tDie CSS Datei \"%(invalid_color_theme)s.css\" für das aktuell ausgewählte Farbschema wurde nicht gefunden.<br>\n"
 "\t\tBitte ein anderes Farbschema auswählen:)\n"
 "\t    "
@@ -7351,10 +7349,8 @@ msgid "Stocktake"
 msgstr "Inventur"
 
 #: templates/js/stock.js:705
-#, fuzzy
-#| msgid "Sub part must be specified"
 msgid "Supplier part not specified"
-msgstr "Zuliefererteil muss festgelegt sein"
+msgstr ""
 
 #: templates/js/stock.js:876
 msgid "Stock Status"
@@ -7914,3 +7910,4 @@ msgstr "Berechtigungen Einträge zu ändern"
 #: users/models.py:193
 msgid "Permission to delete items"
 msgstr "Berechtigung Einträge zu löschen"
+
