--- a/InvenTree/locale/ja/LC_MESSAGES/django.po
+++ b/InvenTree/locale/ja/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-09 06:58+0000\n"
-"PO-Revision-Date: 2021-07-09 08:02\n"
+"PO-Revision-Date: 2021-07-09 09:19\n"
 "Last-Translator: \n"
 "Language-Team: Japanese\n"
 "Language: ja_JP\n"
@@ -116,11 +116,11 @@ msgstr ""
 
 #: InvenTree/models.py:64 templates/js/attachment.js:52
 msgid "Comment"
-msgstr ""
+msgstr "コメント："
 
 #: InvenTree/models.py:64
 msgid "File comment"
-msgstr ""
+msgstr "ファイルコメント"
 
 #: InvenTree/models.py:70 InvenTree/models.py:71 part/models.py:2042
 #: report/templates/report/inventree_test_report_base.html:91
@@ -548,7 +548,7 @@ msgstr ""
 
 #: build/forms.py:211
 msgid "Location of completed parts"
-msgstr ""
+msgstr "完了したパーツの場所"
 
 #: build/forms.py:215 build/templates/build/build_base.html:138
 #: build/templates/build/detail.html:59 order/models.py:549
@@ -847,7 +847,7 @@ msgstr ""
 
 #: build/models.py:1365
 msgid "Build to allocate parts"
-msgstr ""
+msgstr "パーツを割り当てるためにビルドする"
 
 #: build/models.py:1381 stock/templates/stock/item_base.html:8
 #: stock/templates/stock/item_base.html:31
@@ -877,7 +877,7 @@ msgstr ""
 
 #: build/templates/build/allocate.html:7
 msgid "Allocate Parts"
-msgstr ""
+msgstr "パーツを割り当て"
 
 #: build/templates/build/allocate.html:15
 msgid "Allocate Stock to Build"
@@ -901,7 +901,7 @@ msgstr ""
 
 #: build/templates/build/allocate.html:29
 msgid "Order required parts"
-msgstr ""
+msgstr "注文必須パーツ"
 
 #: build/templates/build/allocate.html:30
 #: company/templates/company/detail_manufacturer_part.html:33
@@ -3204,7 +3204,7 @@ msgstr ""
 
 #: order/templates/order/order_wizard/select_parts.html:20
 msgid "No purchaseable parts selected"
-msgstr ""
+msgstr "購入可能なパーツが選択されていません"
 
 #: order/templates/order/order_wizard/select_parts.html:33
 msgid "Select Supplier"
@@ -3327,7 +3327,7 @@ msgstr ""
 #: order/templates/order/receive_parts.html:8
 #, python-format
 msgid "Receive outstanding parts for <b>%(order)s</b> - <i>%(desc)s</i>"
-msgstr ""
+msgstr "<b>%(order)s</b> - <i>%(desc)s</i> の未処理のパーツを受け取る"
 
 #: order/templates/order/receive_parts.html:14 part/api.py:47
 #: part/models.py:326 part/templates/part/cat_link.html:7
