--- a/InvenTree/locale/nl/LC_MESSAGES/django.po
+++ b/InvenTree/locale/nl/LC_MESSAGES/django.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-26 07:13+0000\n"
-"PO-Revision-Date: 2023-06-24 07:43\n"
+"POT-Creation-Date: 2023-06-23 22:42+0000\n"
+"PO-Revision-Date: 2023-06-27 09:14\n"
 "Last-Translator: \n"
 "Language-Team: Dutch\n"
 "Language: nl_NL\n"
@@ -27,19 +27,19 @@ msgstr "Gebruiker heeft geen rechten om dit model te bekijken"
 
 #: InvenTree/conversion.py:73
 msgid "No value provided"
-msgstr ""
+msgstr "Geen waarde opgegeven"
 
 #: InvenTree/conversion.py:95
 msgid "Provided value is not a valid number"
-msgstr ""
+msgstr "Opgegeven waarde is geen geldig nummer"
 
 #: InvenTree/conversion.py:97
 msgid "Provided value has an invalid unit"
-msgstr ""
+msgstr "De opgegeven waarde heeft een ongeldige eenheid"
 
 #: InvenTree/conversion.py:99
 msgid "Provided value could not be converted to the specified unit"
-msgstr ""
+msgstr "De opgegeven waarde kon niet geconverteerd worden naar de opgegeven eenheid"
 
 #: InvenTree/exceptions.py:90
 msgid "Error details can be found in the admin panel"
@@ -123,7 +123,7 @@ msgstr "Het ingevoerde e-maildomein is niet goedgekeurd."
 
 #: InvenTree/forms.py:345
 msgid "Registration is disabled."
-msgstr ""
+msgstr "Registratie is uitgeschakeld."
 
 #: InvenTree/helpers.py:462 order/models.py:455 order/models.py:624
 msgid "Invalid quantity provided"
@@ -199,15 +199,15 @@ msgstr "Opgegeven URL is geen geldig afbeeldingsbestand"
 
 #: InvenTree/models.py:82
 msgid "Metadata must be a python dict object"
-msgstr ""
+msgstr "Metadata moeten een python dict object zijn"
 
 #: InvenTree/models.py:86
 msgid "Plugin Metadata"
-msgstr ""
+msgstr "Plugin Metadata"
 
 #: InvenTree/models.py:87
 msgid "JSON metadata field, for use by external plugins"
-msgstr ""
+msgstr "JSON metadata veld, voor gebruik door externe plugins"
 
 #: InvenTree/models.py:320
 msgid "Improperly formatted pattern"
@@ -395,7 +395,7 @@ msgstr "Pad"
 
 #: InvenTree/models.py:767
 msgid "Markdown notes (optional)"
-msgstr ""
+msgstr "Markdown notitie (optioneel)"
 
 #: InvenTree/models.py:794
 msgid "Barcode Data"
@@ -725,7 +725,7 @@ msgstr "Locatie veranderd"
 
 #: InvenTree/status_codes.py:106
 msgid "Stock updated"
-msgstr ""
+msgstr "Voorraad bijgewerkt"
 
 #: InvenTree/status_codes.py:109
 msgid "Installed into assembly"
@@ -769,7 +769,7 @@ msgstr "Product voltooid"
 
 #: InvenTree/status_codes.py:128
 msgid "Build order output rejected"
-msgstr ""
+msgstr "Build order uitvoer afgewezen"
 
 #: InvenTree/status_codes.py:129 templates/js/translated/stock.js:1675
 msgid "Consumed by build order"
@@ -821,7 +821,7 @@ msgstr "Afwijzen"
 
 #: InvenTree/validators.py:32 InvenTree/validators.py:34
 msgid "Invalid physical unit"
-msgstr ""
+msgstr "Ongeldige fysieke eenheid"
 
 #: InvenTree/validators.py:40
 msgid "Not a valid currency code"
@@ -872,7 +872,7 @@ msgstr "Productie moet geannuleerd worden voordat het kan worden verwijderd"
 #: templates/js/translated/table_filters.js:166
 #: templates/js/translated/table_filters.js:518
 msgid "Consumable"
-msgstr ""
+msgstr "Verbruiksartikelen"
 
 #: build/api.py:287 part/models.py:3830 part/templates/part/upload_bom.html:58
 #: templates/js/translated/bom.js:989 templates/js/translated/bom.js:1016
@@ -881,12 +881,12 @@ msgstr ""
 #: templates/js/translated/table_filters.js:191
 #: templates/js/translated/table_filters.js:522
 msgid "Optional"
-msgstr ""
+msgstr "Optioneel"
 
 #: build/api.py:288 templates/js/translated/table_filters.js:360
 #: templates/js/translated/table_filters.js:514
 msgid "Tracked"
-msgstr ""
+msgstr "Gevolgd"
 
 #: build/api.py:290 part/admin.py:64 templates/js/translated/build.js:1666
 #: templates/js/translated/build.js:2545
@@ -941,7 +941,7 @@ msgstr "Referentie"
 
 #: build/models.py:171
 msgid "Brief description of the build (optional)"
-msgstr ""
+msgstr "Korte beschrijving van de build (optioneel)"
 
 #: build/models.py:179 build/templates/build/build_base.html:184
 #: build/templates/build/detail.html:87
@@ -1144,7 +1144,7 @@ msgstr "Prioriteit van deze bouwopdracht"
 #: templates/js/translated/table_filters.js:24
 #: templates/project_code_data.html:6
 msgid "Project Code"
-msgstr ""
+msgstr "Project Code"
 
 #: build/models.py:310
 msgid "Project code for this build order"
@@ -12694,8 +12694,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr ""
 
@@ -12830,3 +12829,4 @@ msgstr ""
 #: users/models.py:253
 msgid "Permission to delete items"
 msgstr ""
+
