--- a/InvenTree/locale/fr/LC_MESSAGES/django.po
+++ b/InvenTree/locale/fr/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-04 21:22+0000\n"
-"PO-Revision-Date: 2023-07-03 21:43\n"
+"PO-Revision-Date: 2023-07-04 21:46\n"
 "Last-Translator: \n"
 "Language-Team: French\n"
 "Language: fr_FR\n"
@@ -2273,7 +2273,7 @@ msgstr "Assemblage"
 
 #: common/models.py:1170
 msgid "Parts can be assembled from other components by default"
-msgstr "Les composantes peuvent être assemblées à partir d'autres composants par défaut"
+msgstr "Les pièces peuvent être assemblées à partir d'autres composants par défaut"
 
 #: common/models.py:1176 part/admin.py:52 part/models.py:1006
 #: templates/js/translated/table_filters.js:664
@@ -2282,7 +2282,7 @@ msgstr "Composant"
 
 #: common/models.py:1177
 msgid "Parts can be used as sub-components by default"
-msgstr "Les composantes peuvent être utilisées comme sous-composants par défaut"
+msgstr "Les pièces peuvent être utilisées comme sous-composants par défaut"
 
 #: common/models.py:1183 part/admin.py:53 part/models.py:1017
 msgid "Purchaseable"
@@ -3454,7 +3454,7 @@ msgstr "Les champs correspondants ont échoué"
 
 #: common/views.py:481
 msgid "Parts imported"
-msgstr "Composantes importées"
+msgstr "Pièces importées"
 
 #: common/views.py:509 order/templates/order/order_wizard/match_fields.html:27
 #: order/templates/order/order_wizard/match_parts.html:19
@@ -5449,7 +5449,7 @@ msgstr ""
 #: templates/js/translated/part.js:2736 templates/js/translated/search.js:130
 #: templates/navbar.html:24 users/models.py:38
 msgid "Parts"
-msgstr "Composantes"
+msgstr "Pièces"
 
 #: part/admin.py:265
 msgid "BOM Level"
@@ -6525,7 +6525,7 @@ msgstr ""
 
 #: part/templates/part/category.html:126
 msgid "Parts (Including subcategories)"
-msgstr "Composantes (incluant sous-catégories)"
+msgstr "Pièces (incluant les sous-catégories)"
 
 #: part/templates/part/category.html:164
 msgid "Create new part"
@@ -6560,7 +6560,7 @@ msgstr ""
 #: part/templates/part/copy_part.html:14
 #: part/templates/part/create_part.html:11
 msgid "Possible Matching Parts"
-msgstr "Composantes correspondantes possibles"
+msgstr "Pièces pouvant correspondre"
 
 #: part/templates/part/copy_part.html:15
 #: part/templates/part/create_part.html:12
@@ -10342,11 +10342,11 @@ msgstr ""
 
 #: templates/js/translated/company.js:535
 msgid "Parts Supplied"
-msgstr "Composantes fournies"
+msgstr "Pièces fournies"
 
 #: templates/js/translated/company.js:544
 msgid "Parts Manufactured"
-msgstr "Composantes fabriquées"
+msgstr "Pièces fabriquées"
 
 #: templates/js/translated/company.js:559
 msgid "No company information found"
@@ -12694,8 +12694,7 @@ msgstr ""
 
 #: templates/socialaccount/signup.html:10
 #, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
+msgid "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s.<br>As a final step, please complete the following form:"
 msgstr ""
 
@@ -12830,3 +12829,4 @@ msgstr "Droit de modifier des élément"
 #: users/models.py:253
 msgid "Permission to delete items"
 msgstr "Droit de supprimer des éléments"
+
